--- a/evernote.css
+++ b/evernote.css
@@ -11,7 +11,7 @@ body {
 h1 {
 	margin: 0px;
 	margin-top: 30px;
-	color: #004080;
+	color: #27a553;
 }
 
 h3 {
@@ -35,9 +35,6 @@ a:hover {
 
 ul {
 	list-style-type: square;
-	font-size: 24px;
-	margin-left: 20px;
-	margin-top: 10px;
 }
 
 .header {
@@ -50,9 +47,14 @@ ul {
 }
 
 .header a {
-	color: #004080;
+	color: #27a553;
 }
 
 .info-paragraph {
-	margin-left: 20px;
+	margin: 0 15%;
+}
+
+.info-paragraph p {
+	font-size: 18px;
+	line-height: 1.5em;
 }
