--- a/home.css
+++ b/home.css
@@ -1,191 +1,33 @@
-
 body {
-	background-color: #f7f7f7;
+  background-color: #f7f7f7;
+  margin: 5%;
+  font-family: Avenir;
 }
 
 h1 {
-	margin: 0px;
-	margin-top: 30px;
+  font-size: 5em;
+  text-decoration: bold;
 }
 
-h3 {
-	margin: 0px;
-	font-size: 36px;
+p {
+  font-size:1.2em;
 }
 
-a {
-	text-decoration: none;
+p a {
+  text-decoration: none;
+}
+.list-group-item {
+  background-color: #f7f7f7;
+  font-size:1.2em;
 }
 
-.container {
-	width: 80%;
-	margin: 0 auto;
-	min-height:100%;
-	position:relative;
-}
-
-.header {
-	font-family: helvetica;
-	padding: 0px;
-	padding-bottom: 10px;
-	width: 100%
-	text-align: left;
-	font-size: 60px;
-	position: relative;
-	right: 50px;
-}
-
-.grid {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: flex-start;
-	align-items: flex-start;
-}
-
-.block-link > a {
-	cursor: pointer;
-}
-
-.hover-underline:hover {
-	text-decoration: underline;
-}
-
-.rice-box {
-	font-family: verdana;
-	font-size: 24px;
-	padding: 25px;
-	margin: 10px;
-	width: 230px;
-	height: 230px;
-	/*display: block;*/
-
-	border: 8px solid #004080;
-	color: #004080;
-	background-color: #cce5ff;
-
-}
-
-.rice-box > a:link, .rice-box > a:visited {
-	color: #004080;
-}
-
-
-.evernote-box {
-	font-family: verdana;
-	font-size: 24px;
-	padding: 25px;
-	margin: 10px;
-	width: 230px;
-	height: 230px;
-
-	border: 8px solid #27a553;
-	color: #27a553;
-	background-color: #eafaf0;
-}
-
-.evernote-box > a:visited {
-	color: #27a553;
-}
-
-
-.runner-box {
-	font-family: verdana;
-	font-size: 24px;
-	padding: 25px;
-	margin: 10px;
-	width: 230px;
-	height: 230px;
-
-	border: 8px solid #fc4c02;
-	color: #fc4c02;
-	background-color: #ffede6;
-}
-
-.runner-box > a:visited, .runner-box > a:link {
-	color: #fc4c02;
-}
-
-.coder-box {
-	font-family: verdana;
-	font-size: 24px;
-	padding: 25px;
-	margin: 10px;
-	width: 230px;
-	height: 230px;
-
-	border: 8px solid #672fd0;
-	color: #672fd0;
-	background-color: #e1d5f6;
-}
-
-.coder-box > a:visited, .coder-box > a:link {
-	color: #672fd0;
-}
-
-.reader-box {
-	font-family: verdana;
-	font-size: 24px;
-	padding: 25px;
-	margin: 10px;
-	width: 230px;
-	height: 230px;
-
-	border: 8px solid #b33c00;
-	color: #b33c00;
-	background-color: #ffddcc;
-}
-
-.reader-box > a:visited, .reader-box > a:link {
-	color: #b33c00;
-}
-
-.grid-box {
-	font-family: verdana;
-	font-size: 24px;
-	padding: 25px;
-	margin: 10px;
-	width: 230px;
-	height: 230px;
-
-	border: 8px solid black;
-	color: black;
-	background-color: #e6e6e6;
-}
-
-.grid-box > a:visited, .grid-box > a:link {
-	color: black;
-}
-
-.grid-box > a:hover {
-	font-weight: bold;
-}
-
-.footer {
-	left: 0px;
-	right: 0px;
-	top: 0px;
-	margin-top: 100px;
-	padding: 20px
-
-	width: 100%;
-	text-align: center;
-	font-family: verdana;
-	font-size: 14px;
+.link-list {
+  padding-left: 5%;
 }
 
 
 @media (max-width: 1000px) {
-	.grid {
-		justify-content: center;
-	}
-
-	.container {
-		width: 95%;
-	}
-
-	.header {
-		font-size: 40px;
-		right: 0px;
-	}
+  .link-list {
+    padding-left: 1%;
+  }
 }
