--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1 {
   text-decoration: bold;
 }
 
-p {
+p, li {
   font-size:1.2em;
 }
 
@@ -27,30 +27,21 @@ a {
   padding-left: 5%;
 }
 
-.blog-post-show { 
-  display: block;
-}
-
-.blog-post-hide {
-  display: none;
-}
-
-.blog-table-of-contents-entry {
-  cursor: grab;
-  text-decoration: underline;
-}
-
-.blog-table-of-contents-entry-selected {
-  font-weight: bold;
-}
-
 @media (max-width: 1000px) {
   .indent {
     padding-left: 1%;
   }
 
+  body {
+    margin: 2%
+  }
+
   h1 {
     font-size: 3.5em;
+  }
+
+  p, li {
+    font-size: 1.9em;
   }
 
   .list-group {
