--- a/style.css
+++ b/style.css
@@ -40,8 +40,13 @@ a {
     font-size: 3.5em;
   }
 
-  p, li {
-    font-size: 1.9em;
+  p, li, .list-group-item {
+    font-size: 2.2em;
+  }
+
+  .container {
+    margin-left: 3%;
+    margin-right: 3%;
   }
 
   .list-group {
